# LLM

./: README.md  pyproject.toml
LLMProject/: AttentionCNN.py  bigram.py  main.py  v2-visualization.py  v2.py
